--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -34,29 +34,29 @@ $(function () {
     <a href="index.html"> Home</a>
     </section>
 
-    <form action="/" method="post">
-      <select class="form-control" id="cate">
-          <option value="category">음악</option>
-          <option value="category">노하우/스타일</option>
-          <option value="category">게임</option>
-          <option value="category">뉴스/정치</option>
-          <option value="category">코미디</option>
-          <option value="category">자동차</option>
-          <option value="category">인물/블로그</option>
-          <option value="category">스포츠</option>
-          <option value="category">엔터테이먼트</option>
-          <option value="category">동물</option>
-          <option value="category">여행/이벤트</option>
-          <option value="category">교육</option>
-          <option value="category">영화/애니메이션</option>
+    <form action="/listPage2">
+      <select name="category">
+        <option value=음악>음악</option>
+        <option value="노하우/스타일">노하우/스타일</option>
+        <option value="게임">게임</option>
+        <option value="뉴스/정치">뉴스/정치</option>
+        <option value="코미디">코미디</option>
+        <option value="자동차">자동차</option>
+        <option value="인물/블로그">인물/블로그</option>
+        <option value="스포츠">스포츠</option>
+        <option value="엔터테이먼트">엔터테이먼트</option>
+        <option value="동물">동물</option>
+        <option value="여행/이벤트">여행/이벤트</option>
+        <option value="교육">교육</option>
+        <option value="영화/애니메이션">영화/애니메이션</option>
       </select>
-      <select class="form-control" id="sub">
-        <option value="subscribe">10만 이하</option>
-        <option value="subscribe">10만 ~ 100만</option>
-        <option value="subscribe">100만 ~ 1000만</option>
-        <option value="subscribe">1000만 이상</option>
+      <select name="sub">
+        <option value=1>10만 이하</option>
+        <option value=2>10만 ~ 100만</option>
+        <option value=3>100만 ~ 1000만</option>
+        <option value=4>1000만 이상</option>
       </select>
-      <input type="submit" value="GO!" />
+        <input type="submit" value="GO!" />
     </form>
     <!-- Main content -->
     <section class="content">
