--- a/src/main/resources/templates/SignPage.html
+++ b/src/main/resources/templates/SignPage.html
@@ -28,6 +28,13 @@
         border-spacing:15px;
     }
 </style>
+<script>
+
+    function myFunction(input) {
+      document.getElementById("email").value = input;
+    }
+    
+</script>
  <script>
 
    function numberMaxLength(e){
