--- a/src/main/resources/templates/filterPage.html
+++ b/src/main/resources/templates/filterPage.html
@@ -61,7 +61,7 @@
                 </tr>
                 <tr th:each="channel : ${list}">
                     <td><span th:text="${channel.ch_url}"> 채널 url </span></td>
-                    <td><a th:href="@{/detailPage(${channel.ch_url})}"><span th:text="${channel.ch_name}">채널 이름 </span></a></td>
+                    <td><a th:href="@{/detailPage(url=${channel.ch_url})}"><span th:text="${channel.ch_name}">채널 이름 </span></a></td>
                     <td><span th:text="${channel.sub}"> 구독자 수 </span></td>
                     <td><span th:text="${channel.category}"> 카테고리 </span></td>
                 </tr>
