--- a/src/main/resources/templates/filterPage.html
+++ b/src/main/resources/templates/filterPage.html
@@ -7,9 +7,17 @@
 <head>
 <title>게시판예제-페이징</title>
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script th:inline="javascript">
-    
+  /*
+    <![CDATA[*/
+      let channel = /*[[${list}]]*/ 'default';
+      let id;
+      let i = 0;
+    /*]]>
+  */
 </script>
+</head>
 <body>
   <div layout:fragment="content">
 
@@ -61,11 +69,17 @@
                       <th> 구독자 수 </th>
                       <th> 카테고리 </th>
                   </tr>
-                  <tr th:each="channel : ${list}">
-                      <td><span th:text="${channel.ch_url}"> 채널 url </span></td>
+                  <tr th:each="channel,i : ${list}">
+                      <td><img th:id = "${i.index}" src='' alt=""></td>
                       <td><a th:href="@{/detailPage(url=${channel.ch_url})}"><span th:text="${channel.ch_name}">채널 이름 </span></a></td>
                       <td><span th:text="${channel.sub}"> 구독자 수 </span></td>
                       <td><span th:text="${channel.category}"> 카테고리 </span></td>
+                      <script>
+                        id = '#';
+                        id = id + i;
+                        $(id).attr('src',channel[i].img);
+                        i = i + 1;
+                      </script>
                   </tr>
                 
                 
