--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -6,18 +6,15 @@
 	
 <head>
 <title>게시판예제-페이징</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script th:inline="javascript">
-
-$(function () {
-	
-	var result =/*[[${msg}]]*/ 'default';
-	
-	if(result == 'success'){
-		alert("처리가 완료되었습니다. result:" + result);
-	}
-	
-  });
-
+  /*
+    <![CDATA[*/
+      let channel = /*[[${list}]]*/ 'default';
+      let id;
+      let i = 0;
+    /*]]>
+  */
 </script>
 </head>
 
@@ -66,16 +63,22 @@ $(function () {
             <div class="box-body">
               <table class="table table-bordered">
                 <tr>
-                    <th> 채널 url </th>
+                    <th> 떰네일 </th>
                     <th> 채널 이름 </th>
                     <th> 구독자 수 </th>
                     <th> 카테고리 </th>
                 </tr>
-                <tr th:each="channel : ${list}">
-                    <td><span th:text="${channel.ch_url}"> 채널 url </span></td>
+                <tr th:each="channel,i : ${list}">
+                    <td><img th:id = "${i.index}" src='' alt=""></td>
                     <td><span th:text="${channel.ch_name}"> 채널 이름 </span></td>
                     <td><span th:text="${channel.sub}"> 구독자 수 </span></td>
                     <td><span th:text="${channel.category}"> 카테고리 </span></td>
+                    <script>
+                      id = '#';
+                      id = id + i;
+                      $(id).attr('src',channel[i].img);
+                      i = i + 1;
+                    </script>
                 </tr>
                
               </table>
