--- a/src/main/resources/templates/detailPage.html
+++ b/src/main/resources/templates/detailPage.html
@@ -22,42 +22,111 @@
     /*]]>
   */
 </script>
+<style>
+  *{
+    padding: 0px;
+    margin: 0px;
+  }
+  #header{
+    text-align: center; 
+    background-color: #535353;
+  }
+  #headertext{
+      margin: 7px;
+      display: inline-block;
+      color:  white;
+			vertical-align: middle;
+  }
+  #table{
+    margin: auto;
+  }
+  #footer {
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	padding: 100px 0;
+	text-align: center;
+	color: black;
+	background: #f5f5f7;
+	}
+</style>
 <body>
-    <h1>상세 페이지</h1>
-    <div class="box-body">
-        
-        연락처 : <td th:text="${contact}"></td>
+  <!-- header -->
+  <table id = "header" border="0" cellpadding="0" cellspacing="0" style="height:60px; width:100%" align=center>
+    <tr>
+      <td align=right>
+        mypage
+      </td>
+    </tr>
+  </table>
+  <!-- header-->
 
-        <h3> 광고 목록 </h3>
-        <table class="table table-bordered">
-          <tr>
-              <th> 채널 이름 </th>
+  <!---- main ----->
+  <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
+	  <tbody>
+		  <tr>
+
+
+        <!---- 필터 ---->
+			  <td style="width:255px" valign=top bgcolor="lightgray">&nbsp;
+          <br>
+          <p align=Center size=9><b>연락처</b></p>
+          <br th:text="${contact}"></br>
+          <br>
+          &nbsp;&nbsp;&nbsp;<a href="/listPage"> 초기화 (개발자 모드)</a>
+			  </td>
+        <!---- 필터 ---->
+
+
+        <!---- 내용 ---->
+        <td style="width:755px" align=center valign=top>
+          <br>
+          <table class="table table-bordered">
+            
+            <tr th:if="${list.empty}">
+              <img src="https://i.ibb.co/jTHtpG9/empty.png" alt="">
+            </tr>
+            <tr th:unless="${list.empty}">
+              <th> 업로드 날짜 </th>
               <th> 좋아요 수 </th>
               <th> 광고 영상 </th>
-          </tr>
-          <tr th:if="${list.empty}">
-            <td colspan="2"> 이 채널은 광고를 하지 않았어요 ㅎㅎ </td>
-          </tr>
-          <tr th:each="ad,i : ${list}">
-              <td><span th:text="${ad.name}"> 채널 이름 </span></td>
-              <td><span th:text="${ad.likecnt}"> 좋아요 수 </span></td>
-              <td>
-                <iframe th:id="${i.index}" width="560" height="315" src="" 
-                  title="YouTube video player" frameborder="0" 
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                </iframe>
-                <script>
-                  id = '#';
-                  id = id + i;
-                  url = header + ad[i].ad_url;
-                  $(id).attr('src',url);
-                  i = i+1;
-                </script>
-              </td>
-          </tr>
-        
-         
-        </table>
-      </div>
+            </tr>
+            <tr th:each="ad,i : ${list}">
+                <td><span th:text="${ad.upday}"> 채널 이름 </span></td>
+                <td><span th:text="${ad.likecnt}"> 좋아요 수 </span></td>
+                <td>
+                  <iframe th:id="${i.index}" width="480" height="270" src="" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                  </iframe>
+                  <script>
+                    id = '#';
+                    id = id + i;
+                    url = header + ad[i].ad_url;
+                    $(id).attr('src',url);
+                    i = i+1;
+                  </script>
+                </td>
+            </tr>
+          </table>
+        </td>
+        <!---- 내용 ---->
+
+
+      </tr>
+    </tbody>
+  </table>
+  <!---- main ----->
+
+  <!--footer-->
+  <table cellpadding="1" width = "100%" height = "50" bgcolor="white" align="center">
+    <tr>
+      <td align="center">
+        @copyright: 갈라티코스
+      </td>
+    </tr>
+  </table>
+  <!--footer-->
+
 </body>
 </html>
