--- a/src/main/resources/templates/alert.html
+++ b/src/main/resources/templates/alert.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>로그인 성공!</h1>
-    <h1 th:text="${id}"> </h1>
-    <h1 th:text="${password}"> </h1>
-    <h1 th:text="${name}"> </h1>
-    <h1 th:text="${role}"> </h1>
-    
+    <script th:inline='javascript'>
+        /*
+            <![CDATA[*/
+                alert('로그인 제대로 하세요!');
+                location.href = '/login_page';
+            /*]]>
+        */
+    </script>
 </body>
 </html>
