--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -24,7 +24,12 @@
  </style>
 <body bgcolor="#000000" style="overflow: hidden;">
 
-    <p align=right><a href="index.html"><img src="https://i.ibb.co/ZSHBFyT/home.png" onmouseover="this.src='https://i.ibb.co/BtvN0ff/home2.png'" onmouseout="this.src='https://i.ibb.co/ZSHBFyT/home.png'"></a></p>
+    <p align=right>
+        <a href="index.html">
+            <img src="https://i.ibb.co/ZSHBFyT/home.png" onmouseover="this.src='https://i.ibb.co/BtvN0ff/home2.png'" 
+                                                        onmouseout="this.src='https://i.ibb.co/ZSHBFyT/home.png'">
+        </a>
+    </p>
 
 
 
@@ -32,18 +37,25 @@
 		<div style="text-align:center; vertical-align: middle; margin: 0 auto;">
 			  <center><img src="https://i.ibb.co/19pkQ0X/login-title.png"></center>
 			  <table align=center >
-				 <FORM>
+				 <FORM action="/listPage" method="get">
 						<tr>
 							<td align=center valign=bottom>ID :</td>
-							<td align=center valign=bottom><input type = "text" placeholder="아이디"/></td>
-							<td rowspan="2"><a href="/listPage"><img src="https://i.ibb.co/4Rc2ZWx/login-box2.jpg" class="button2" alt="login_button"><a></td>
+							<td align=center valign=bottom>
+                                <input type = "text" name = "id" placeholder="아이디"/>
+                            </td>
 						</tr>
 						<tr>
 							<td align=center valign=top>PW :</td>
-							<td align=center valign=top><input type = "password" placeholder="비밀번호"/></td>
+							<td align=center valign=top>
+                                <input type = "password" name = "pw" placeholder="비밀번호"/>
+                            </td>
 						</tr>
-
-
+                        <tr>
+                            <td rowspan="2">
+                                <img src="https://i.ibb.co/4Rc2ZWx/login-box2.jpg" class="button2" alt="login_button">
+                                <input type="submit" value="로그인" />
+                            </td>
+                        </tr>
 				 </FORM>
 			  </table>
 			  <a href ="/signPage">Sign in</a> | Find Account( <a href="#">ID</a> / <a href="#">PW</a> )
